# e2openplugin-MultiQuickButton

./: Makefile.am  README  Rules-po.mak  configure.ac
etc/: Makefile.am  quickbutton_blue_long.xml  quickbutton_channeldown.xml  quickbutton_cross_down.xml  quickbutton_cross_left.xml  quickbutton_cross_up.xml  quickbutton_displayHelp.xml  quickbutton_epg.xml  quickbutton_f2_long.xml  quickbutton_green.xml  quickbutton_green_long.xml  quickbutton_guide_long.xml  quickbutton_info.xml  quickbutton_list.xml  quickbutton_media_long.xml  quickbutton_pvr.xml  quickbutton_red.xml  quickbutton_red_long.xml  quickbutton_search_long.xml  quickbutton_stop.xml  quickbutton_subtitle.xml  quickbutton_subtitle_long.xml  quickbutton_timeshift.xml  quickbutton_timeshift_long.xml
keymaps/: Makefile.am  quickbutton_activatePiP.xml  quickbutton_audio.xml  quickbutton_blue.xml  quickbutton_cross_down.xml  quickbutton_cross_left.xml  quickbutton_epg_long.xml  quickbutton_exit.xml  quickbutton_filelist.xml  quickbutton_green.xml  quickbutton_green_long.xml  quickbutton_guide.xml  quickbutton_home.xml  quickbutton_info_long.xml  quickbutton_next.xml  quickbutton_ok.xml  quickbutton_pip_long.xml  quickbutton_play.xml  quickbutton_previous.xml  quickbutton_radio.xml  quickbutton_red_long.xml  quickbutton_search.xml  quickbutton_sleep.xml  quickbutton_text.xml  quickbutton_timer.xml  quickbutton_tv.xml  quickbutton_yellow.xml  quickbutton_yellow_long.xml
po/: Makefile.am  MultiQuickButton.pot  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  en_GB.po  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  is.po  it.po  lt.po  lv.po  nb.po  nl.mo  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  uk.po  (+1 more)
src/: Makefile.am  MultiQuickButton.py  QuickButtonList.py  (+6 more)
(+3 files in other folders)
